[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/basis33.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Sprites/scum_scummybird_190123.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=2]
size = 39
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 23
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="GameTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -155.0
margin_right = 108.0
margin_bottom = -115.0
custom_fonts/font = SubResource( 2 )
text = "Scummy Bird"
align = 1
valign = 1

[node name="HighScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -108.0
margin_right = 108.0
margin_bottom = -88.0
custom_fonts/font = SubResource( 3 )
text = "High Score: 0"
align = 1
valign = 1

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -68.0
margin_right = 105.0
margin_bottom = -18.0
custom_fonts/font = SubResource( 1 )
text = "Play"

[node name="SkinName" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -10.0
margin_right = 108.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 4 )
text = "SkinName"
align = 1
valign = 1

[node name="SkinSprite" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = 16.0
margin_right = 34.0
margin_bottom = 84.0
texture = ExtResource( 3 )
stretch_mode = 5

[node name="PrevSkin" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = 27.0
margin_right = -67.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "<"

[node name="NextSkin" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 67.0
margin_top = 27.0
margin_right = 117.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = ">"

[node name="SkinUnlockCriteria" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.5
margin_top = 88.0
margin_right = 179.5
margin_bottom = 114.0
custom_fonts/font = SubResource( 5 )
text = "Reach a high score of 25 to unlock"
align = 1
valign = 1

[node name="MusicVolumeSliderLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = 118.0
margin_right = 108.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 3 )
text = "Music Volume"
align = 1
valign = 1

[node name="MusicVolumeSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.0
margin_top = 141.0
margin_right = 67.0
margin_bottom = 157.0
value = 100.0

[node name="SoundVolumeSliderLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = 164.0
margin_right = 108.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 3 )
text = "Sound Volume"
align = 1
valign = 1

[node name="SoundVolumeSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.0
margin_top = 187.0
margin_right = 67.0
margin_bottom = 203.0
value = 100.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="PrevSkin" to="." method="_on_PrevSkin_pressed"]
[connection signal="pressed" from="NextSkin" to="." method="_on_NextSkin_pressed"]
[connection signal="value_changed" from="MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="SoundVolumeSlider" to="." method="_on_SoundVolumeSlider_value_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
